Fixed Dilaog layout issues, LazyThumbnailLayout pinch improvements, fix

--- a/magnolia-ui-vaadin-widgetset/src/main/resources/VAADIN/themes/admincentraltheme/dialog.css
+++ b/magnolia-ui-vaadin-widgetset/src/main/resources/VAADIN/themes/admincentraltheme/dialog.css
@@ -114,7 +114,9 @@ button.btn-dialog-help {
 .v-dialog-field-label {
     display: inline-block;
     padding-right: 10px;
+    padding-top: 5px;
     text-align: right;
+    vertical-align: top;
     width: 140px;
 }
 
